refactor: remove paper-1.16.1 and upgrade to jdk 17 (#449)
* feat: remove paper-1.16.1 and use jdk 17 for foundation modules

* refactor: migrate value objects and DTOs to records

- convert core value objects and internal payloads to Java records
- update record accessor usage across platform modules
- preserve metadata compatibility and defensive-copy semantics

* refactor(core): modernize core code with java 17 features

- simplify type checks with instanceof pattern matching
- use `Stream.toList` and `HexFormat`
- replace multiline string builders with text blocks

Co-authored-by: Codex <codex@openai.com>

* feat(frontend): remove 1.16.x frontend resources

---------

Co-authored-by: Codex <codex@openai.com>